# TextFileStatz

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
doc/: report_example.txt  report_example_no_proba.txt  report_example_proba.txt
src/: main.c
test/: maintest.c
